<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCadastro">

    <TextView
        android:id="@+id/txtVariavel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/cadastrar"
        android:textColor="#FF0000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtVariavel"
        android:hint="@string/nome" />

    <EditText
        android:id="@+id/edtCurso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtNome"
        android:hint="@string/curso" />

    <EditText
        android:id="@+id/edtCidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtCurso"
        android:hint="@string/cidade"/>

    <EditText
        android:id="@+id/edtCpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtCidade"
        android:hint="@string/cpf" />

    <EditText
        android:id="@+id/edtIdade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtCpf"
        android:hint="Idade" />

    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtIdade"
        android:hint="Telefone" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtTelefone"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/grey"
        android:text="@string/salvar_cadastro"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSalvar"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/grey"
        android:onClick="btnBuscar"
        android:text="@string/buscar"
        android:textColor="@color/black" />

</RelativeLayout>