<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/titulo"
        android:textColor="#FF0000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textinho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="90dp"
        android:text="@string/textinho" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textinho"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:visibility="invisible" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="406dp"
        android:layout_below="@id/progress_bar" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="650dp"
        android:layout_marginBottom="33dp"
        android:backgroundTint="@color/grey"
        android:onClick="btnCadastrar"
        android:text="@string/novo_cadastro"
        android:textColor="@color/black" />

</RelativeLayout>